[project]
name = "flareio-cli"
version = "0.2.4"
description = "CLI interface for the flare.io API"
repository = "https://github.com/Flared/flareio-cli"
readme = "README.md"
keywords = [
    "flare",
    "sdk",
    "cli",
]
authors = [
    { name = "Alexandre Viau", email = "alexandre.viau@flare.io" }
]
requires-python = ">=3.10"
classifiers = [
  "Intended Audience :: Information Technology",
  "Intended Audience :: Developers",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = []

[project.scripts]
flareio = "flareio_cli:cli.main"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.0",
    "ty>=0.0.15",
]
