[project]
name = "flareio-cli"
version = "0.7.3"
description = "CLI interface for the flare.io API."
repository = "https://github.com/Flared/flareio-cli"
readme = "README.md"
keywords = [
    "flare",
    "sdk",
    "cli",
]
authors = [
    { name = "Alexandre Viau", email = "alexandre.viau@flare.io" }
]
requires-python = ">=3.9"
classifiers = [
  "Intended Audience :: Information Technology",
  "Environment :: Console",
  "Operating System :: POSIX :: Linux",
  "License :: OSI Approved :: MIT License",
  "Topic :: Security",
  "Typing :: Typed",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
    "flareio>=2.1.0",
    "pydantic>=2.12.5",
    "typer>=0.21.1",
]

[project.scripts]
flareio-cli = "flareio_cli:cli.main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.15.0",
    "ty>=0.0.15",
]

[tool.ruff.lint]
extend-select = [
    "I",
    "ANN",
    "C411",
    "C413",
    "C414",
    "C416",
    "C417",
    "C419",
    "F401",
]

[tool.ruff.lint.isort]
force-single-line = true
no-sections = true
lines-after-imports = 2
lines-between-types = 1
force-wrap-aliases = true
combine-as-imports = true
forced-separate = [
    "typing",
]
